config/networkpolicy/allow-egress-kube-apiserver.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-api-server
spec:
  podSelector:
    matchLabels:
      app: ipam-virt-workloads
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 6443
