config/networkpolicy/allow-ingress-to-webhook.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-ipam-ext-webhook
spec:
  podSelector:
    matchLabels:
      app: ipam-virt-workloads
  policyTypes:
    - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: webhook-server
